<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/image"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/name"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscription_details"
        android:textColor="@color/white"
        android:id="@+id/subscription"
        android:layout_toEndOf="@id/image"
        android:layout_below="@id/name"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userID"
        android:textColor="@color/white"
        android:text="@string/id"
        android:layout_below="@id/subscription"
        android:layout_toEndOf="@id/image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/userID"
        android:background="@color/black"/>

</RelativeLayout>